# opengl-engine

./: CMakeLists.txt  README.md
resources/shaders/: fragment.fs  vertex.vs
src/: Main.cpp
src/header/: Mesh.h  Renderer.h  Shader.h  ShaderProgram.h  Texture.h  Window.h
src/include/: glad.c
src/rendering/: Mesh.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Window.cpp
